--- a/follower/style.css
+++ b/follower/style.css
@@ -1,1 +1,37 @@
+@import url('https://cdn.streamelements.com/scripts/animate.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo');
 
+* {
+    font-family: 'Caprasimo', cursive;
+  	}
+
+.awsome-text-container {
+  	position: relative;
+  	animation: slidein 1s;
+    font-size: 4rem;
+    font-weight: bold;
+}
+
+#username-container {
+    display: inline-block;
+    color: rgb(255, 115, 187);
+}
+
+.text-container {
+  	position: absolute;
+  	width: 1280px;
+    color: rgb(255, 255, 255);
+    text-shadow: 0 1px 0px #378ab4, 1px 0 0px #5dabcd, 1px 2px 1px #378ab4, 2px 1px 1px #5dabcd, 2px 3px 2px #378ab4, 3px 2px 2px #5dabcd, 3px 4px 2px #378ab4, 4px 3px 3px #5dabcd, 4px 5px 3px #378ab4, 5px 4px 2px #5dabcd, 5px 6px 2px #378ab4, 6px 5px 2px #5dabcd, 6px 7px 1px #378ab4, 7px 6px 1px #5dabcd, 7px 8px 0px #378ab4, 8px 7px 0px #5dabcd;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
